Revert "Merge branch 'main' of https://github.com/anton-climate/compound into main"
This reverts commit ca3966bf09825a88390bfe259c07650b6b1f988e, reversing
changes made to b5aab0502fbf6dbcd2ebf90876611a872b3c7632.

--- a/cmipIndeces.ipynb
+++ b/cmipIndeces.ipynb
@@ -126,7 +126,7 @@
     "    #['CSIRO', 'ACCESS-ESM1-5'],\n",
     "    ['AWI', 'AWI-CM-1-1-MR'],\n",
     "    #['BCC', 'BCC-CSM2-MR'],\n",
-    "    #['CAMS', 'CAMS-CSM1-0'],\n",
+    "    ['CAMS', 'CAMS-CSM1-0'],\n",
     "    ['CAS', 'CAS-ESM2-0'],\n",
     "    ['NCAR', 'CESM2'],\n",
     "    ['NCAR', 'CESM2-WACCM'],\n",
@@ -136,7 +136,7 @@
     "    ['CNRM-CERFACS', 'CNRM-CM6-1'],\n",
     "    ['CNRM-CERFACS', 'CNRM-CM6-1-HR'],\n",
     "    ['CNRM-CERFACS', 'CNRM-ESM2-1'],\n",
-    "    #['CCCma', 'CanESM5'],\n",
+    "    ['CCCma', 'CanESM5'],\n",
     "    ['CCCma', 'CanESM5-CanOE'],\n",
     "    ['E3SM-Project', 'E3SM-1-1'],\n",
     "    ['EC-Earth-Consortium', 'EC-Earth3'],\n",
@@ -173,7 +173,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -181,115 +180,6 @@
     "#for model in modelSet[:,1]: #_model.scenarioMIP[:,1]:\n",
     "\n",
     "def importAndCalculate(model):\n",
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CAS-ESM2-0\n",
-      "file not found on ESGF\n",
-      "Files (filter term: ts_Amon_.*?CAS-ESM2-0_piControl_r1i1p1f1_.*?\\.nc ) not found, possibly test name is wrong\n",
-      "Climatology did not calculate\n",
-      "CESM2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1387: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
-      "chunk and silence this warning, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
-      "    ...     array[indexer]\n",
-      "\n",
-      "To avoid creating the large chunks, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
-      "    ...     array[indexer]\n",
-      "  value = value[(slice(None),) * axis + (subkey,)]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ds looks like CMIP6\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 100 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 100 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 100 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 100 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1387: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
-      "chunk and silence this warning, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
-      "    ...     array[indexer]\n",
-      "\n",
-      "To avoid creating the large chunks, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
-      "    ...     array[indexer]\n",
-      "  value = value[(slice(None),) * axis + (subkey,)]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 100 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 100 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 100 times more chunks\n",
-      "  return self.array[key]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "piControl complete\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'ts' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 165 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 165 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 165 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 165 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 165 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/conventions.py:512: SerializationWarning: variable 'psl' has multiple fill values {1e+20, 1e+20}, decoding all values to NaN.\n",
-      "  new_vars[k] = decode_cf_variable(\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 165 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1381: PerformanceWarning: Slicing with an out-of-order index is generating 165 times more chunks\n",
-      "  return self.array[key]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for model in modelSet[1:,1]: #_model.scenarioMIP[:,1]:\n",
->>>>>>> d464c7027a56215a5269070297f2aca8ec98aef7
     "    \n",
     "    try: \n",
     "        print(model)\n",
@@ -329,16 +219,11 @@
     "                print(experiment + ' complete')  \n",
     "            \n",
     "    except Exception as e:\n",
-    "        print(e)\n",
     "        print(\"Climatology did not calculate\")\n",
+    "        print(e)\n",
     "        \n",
-<<<<<<< HEAD
     "    #no exceptions\n",
     "    return True\n",
-=======
-    "    else:\n",
-    "        print(model + ' complete') \n",
->>>>>>> d464c7027a56215a5269070297f2aca8ec98aef7
     "    "
    ]
   },
