some Cmip results

--- a/cmipIndeces.ipynb
+++ b/cmipIndeces.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "       ['MOHC', 'UKESM1-0-LL', 'r1i1p1f2', 'r1i1p1f2']], dtype='<U19')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,30 +217,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['AWI' 'AWI-CM-1-1-MR' 'r1i1p1f1' 'r1i1p1f1']\n",
-      "AWI-CM-1-1-MR starting\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1387: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
-      "chunk and silence this warning, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
-      "    ...     array[indexer]\n",
-      "\n",
-      "To avoid creating the large chunks, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
-      "    ...     array[indexer]\n",
-      "  value = value[(slice(None),) * axis + (subkey,)]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CMIP6.CMIP.AWI.AWI-CM-1-1-MR.piControl.r1i1p1f1.Amon.psl.gn.v20181218|esgf3.dkrz.de downloading\n"
+      "['MOHC' 'UKESM1-0-LL' 'r1i1p1f2' 'r1i1p1f2']\n",
+      "UKESM1-0-LL starting\n",
+      "CMIP6.CMIP.MOHC.UKESM1-0-LL.piControl.r1i1p1f2.Amon.ts.gn.v20200828|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.CMIP.MOHC.UKESM1-0-LL.piControl.r1i1p1f2.Amon.ts.gn.v20200828|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.CMIP.MOHC.UKESM1-0-LL.piControl.r1i1p1f2.Amon.ts.gn.v20200828|esgf-data3.ceda.ac.uk downloading\n",
+      "CMIP6.CMIP.MOHC.UKESM1-0-LL.piControl.r1i1p1f2.Amon.psl.gn.v20200828|esgf-data1.llnl.gov downloading\n",
+      "CMIP6.CMIP.MOHC.UKESM1-0-LL.piControl.r1i1p1f2.Amon.psl.gn.v20200828|esgf-data3.diasjp.net downloading\n",
+      "CMIP6.CMIP.MOHC.UKESM1-0-LL.piControl.r1i1p1f2.Amon.psl.gn.v20200828|esgf.nci.org.au downloading\n",
+      "CMIP6.CMIP.MOHC.UKESM1-0-LL.piControl.r1i1p1f2.Amon.psl.gn.v20200828|esgf-data3.ceda.ac.uk downloading\n"
      ]
     }
    ],
@@ -285,11 +270,15 @@
     "\n",
     "        for i in sstIndeces:\n",
     "            sstClimat[i]=xarray.open_dataarray('results/cmipMonthlyIndeces/sstClimat'+iModel[1]+i+'.nc')\n",
-    "        pslClimat=xarray.open_dataset('results/cmipMonthlyIndeces/pslClimat'+iModel[1]+'.nc')\n",
-    "        \n",
     "        #the piControl\n",
+    "        tsDs = fh.loadModelData(iModel[1], 'ts_Amon', 'piControl', iModel[2]).ts.to_dataset()\n",
+    "        controlDs=tsDs.assign_attrs({'project_id':'CMIP'})\n",
     "        sstIndex = sst.calculateIndex(controlDs, sstClimat) \n",
+    "        \n",
+    "        pslClimat=xarray.open_dataset('results/cmipMonthlyIndeces/pslClimat'+iModel[1]+'.nc')\n",
+    "        pslControlDs=fh.loadModelData(iModel[1], 'psl_Amon', 'piControl', iModel[2])\n",
     "        pslIndex, junk = psl.calculateSamIndex(pslControlDs, pslClimat)\n",
+    "        \n",
     "        indeces = xarray.merge([pslIndex, sstIndex])\n",
     "        indeces.assign_attrs(climatology='full length of pi Control')\n",
     "        print('Caclulating control ...')\n",
